[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/parrot1.png" type="Texture" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Fonts/font.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/Fonts/font.ttf"

[sub_resource type="DynamicFont" id=9]
size = 80
outline_size = 1
outline_color = Color( 0, 0.4, 0.2, 1 )
use_mipmaps = true
extra_spacing_top = 20
extra_spacing_bottom = 20
extra_spacing_space = 10
font_data = SubResource( 8 )

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.176
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.799988
custom_constants/separation = 200

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
margin_left = 407.0
margin_right = 593.0
margin_bottom = 145.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="HighScores" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 345.0
margin_right = 1000.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 2 )
text = "High Scores:"
align = 1
autowrap = true
uppercase = true

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 345.0
margin_right = 1000.0
margin_bottom = 623.0
alignment = 1

[node name="PlayContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer"]
margin_right = 1000.0
margin_bottom = 137.0

[node name="PlayButton" type="Button" parent="VBoxContainer/ButtonsContainer/PlayContainer"]
margin_left = 354.0
margin_right = 646.0
margin_bottom = 137.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_constants/hseparation = 2
action_mode = 0
text = "PLAY"

[node name="QuitContainer" type="CenterContainer" parent="VBoxContainer/ButtonsContainer"]
margin_top = 141.0
margin_right = 1000.0
margin_bottom = 278.0

[node name="QuitButton" type="Button" parent="VBoxContainer/ButtonsContainer/QuitContainer"]
margin_left = 387.0
margin_right = 612.0
margin_bottom = 137.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
custom_constants/hseparation = 2
action_mode = 0
text = "QUIT"
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/PlayContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/QuitContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
